--- a/sim/INCA_libs/history
+++ b/sim/INCA_libs/history
@@ -123,3 +123,8 @@ s118::(22Oct2020:19:25:32):( irun testfixture.v ../src/NFC.v +define+p2+FSDB +ac
 s119::(22Oct2020:19:26:14):( irun testfixture.v ../src/NFC.v +define+p1+FSDB +access+r )
 s120::(22Oct2020:19:26:55):( irun testfixture.v ../src/NFC.v +define+p1+FSDB +access+r )
 s121::(22Oct2020:19:27:11):( irun testfixture.v ../src/NFC.v +define+p2+FSDB +access+r )
+s122::(22Oct2020:19:33:13):( ncverilog testfixture.v ../syn/NFC_syn.v -v ../../tsmc13_neg.v +define+p1 )
+s123::(22Oct2020:19:33:55):( ncverilog testfixture.v ../syn/NFC_syn.v -v ../../tsmc13_neg.v +define+p1 +define+SDF )
+s124::(22Oct2020:19:34:15):( ncverilog testfixture.v ../syn/NFC_syn.v -v ../../tsmc13_neg.v +define+p2 +define+SDF )
+s125::(22Oct2020:19:35:44):( ncverilog testfixture.v ../syn/NFC_syn.v -v ../../tsmc13_neg.v +define+p2+FSDB +define+SDF )
+s126::(22Oct2020:19:35:49):( ncverilog testfixture.v ../syn/NFC_syn.v -v ../../tsmc13_neg.v +define+p2+FSDB +define+SDF +access+r )
